--- a/index.html
+++ b/index.html
@@ -1,12 +1,6 @@
-<!--Leider bin ich auch absolut nicht mit meiner Arbeit zufrieden, aber die Tatsache, dass wir für
-    diese Aufgabe lediglich 12h Zeit hatten (im Vergleich zum Roma-Projekt ....) hat mich leider auch
-    zusätzlich unter Druck gesetzt... m.f.G.-Ferdi--->
-
-
-
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,17 +12,13 @@
 <body>
     <header>
         <div class="logo1">
-            <img src="assets/img/logo.svg">
-
-            <div class="logo2">
-
+            <img src="assets/img/logo.svg" class="logoo">
+            <span class="logo2">
                 <h2>TheDesignProject</h2>
-                <p>by a WebDesigner</p>
-            </div>
+                <h4>by a Web Designer</h4>
+            </span>
         </div>
     </header>
-
-
     <section class="section1">
         <div class="first">
             <h1><strong>How to become a better designer?</strong></h1>
@@ -38,16 +28,9 @@
             <a href="#">SCROLL TO SEE MORE —</a>
         </div>
     </section>
-
     <section class="section2">
-
         <img src="assets/img/images.jpg">
-
     </section>
-
-
-
-
     <section class="section3">
         <div class="idea">
             <h1>Every idea <img src="assets/img/idea.png"><br> starts with a<br> need</h1>
@@ -65,7 +48,6 @@
     <div class="asw">
         <h1><b>After several weeks of<br> sticking to this challenge, I<br> learned a lot</b></h1>
     </div>
-
     <section class="section4">
         <article>
             <div>
@@ -88,7 +70,6 @@
                 </p>
             </div>
         </article>
-
         <article>
             <div>
                 <h2>
@@ -113,14 +94,17 @@
                 </p>
             </div>
         </article>
-
+        <br>
     </section>
     <section class="section5">
+        <br>
+        <br>
         <h1>Are you ready? Let’s go!! </h1>
+        <br>
+        <br>
         <p>The challenge lasts 30 days. On each of those days you will have to create
             a solution to any problem you yourself are facing and show the result to the community.</p>
         <br>
-
         <div class="div01">
             <img src="assets/img/step01.png" class="pics">
             <h1 class="counter">01</h1><img src="assets/img/step01.svg" class="svg">
@@ -157,15 +141,7 @@
                 it.
             </p>
         </div>
-
     </section>
-
-
-
-
-
-
-
     <footer class="footer">
         <div>
             <h2>Do you like this challenge?</h2>
@@ -175,11 +151,9 @@
             <br>
             <button>Subscribe</button>
         </div>
-
         <h5>
             Created with Love by a WebDesigner
             <img src="assets/img/love.png" height="40px">
-
         </h5>
     </footer>
 </body>
